    - Introducing scourge-devourer, spawns 2 scourges, 5-10 seconds cooldown. Spawned unit's time to live 2 minutes.

  Changes:
    - Changed boss despawn attack parameters.
    - Buffed hydralisk damage @ L20 from 80 to 100.
    - Buffed mutalisk damage @ L20 from 100 to 120.
    - Self destruct unit explosion now spawn at source, instead of target

  Graphics:
    - Removed integration animation for unit-spawners, not applicable and cause unintended affect on HD graphic.
    - Fixed shadows after integration animation removal.
    - Changed explosion animation_speed to 0.2 (12fps)
    - Changed death animation_speed to 0.15 (9fps)
    - Changed run, attack animation_speed to 0.5 (30fps)
    - Removed purple dying explosion on some units.


---------------------------------------------------------------------------------------------------
Version: 1.19.0
Date: 2023-03-12

  Features:
    - Added support for Milestones mod.
    - "Default" enemy spawner generating method now group enemy spawns together.

  Changes:
    - Changed code to use new remote interface name
    - Tweaked feature groups.

---------------------------------------------------------------------------------------------------
Version: 1.18.2
Date: 2023-01-13

  Changes:
    - Add support for pollution to join attack multiplier setting

---------------------------------------------------------------------------------------------------
Version: 1.18.1
Date: 2022-12-16

  Changes:
    - Fix boss map color

---------------------------------------------------------------------------------------------------
Version: 1.18.0
Date: 2022-12-12

  Major Features:
    - Boss mode support, Boss mode support, proof of concept release

  Features:
    - Defiler can cast dark swarm.  Heals zerg units 250 - 600 health / sec for 3 seconds.
    - Defiler has 7.5% chance to cast Dark Swamp and 95% chance to cast Plague on target, 5% chance cast dark swamp on itself.

  Graphics:
    - Updated queen's snare graphic.